Bug 134786 - UI: Incorrect value in spin button ( gtk3 )
Summary: UI: Incorrect value in spin button ( gtk3 )
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.1.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.1.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2020-07-13 15:10 UTC by Xisco Faulí
Modified: 2020-07-14 14:35 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
screencast (849.32 KB, video/x-matroska)
2020-07-13 15:10 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2020-07-13 15:10:34 UTC
Created attachment 162984 [details]
screencast

Steps to reproduce:
1. Open attachment 162225 [details] from bug 134163
2. Double click on the chart
3. Double click on the X Axis
4. Positioning tab
5. Increase and decrease 'Cross other axis at' value

-> Value is 0.22250738585072E-307 instead of 0. Besides, not posssible to have negative values. it's possible with gen

Reproduced in

Version: 7.1.0.0.alpha0+
Build ID: 00be56d9db396d284f66ab723d6fbb898b888dfb
CPU threads: 4; OS: Linux 4.19; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 1 Xisco Faulí 2020-07-13 15:11:56 UTC
Regression introduced by:

https://git.libreoffice.org/core/+/95cfa85395f983df3ba044192b29ce0bbc5e6085%5E%21/

commit 95cfa85395f983df3ba044192b29ce0bbc5e6085	[log]
author	Caolán McNamara <caolanm@redhat.com>	Fri Jul 03 12:08:02 2020 +0100
committer	Caolán McNamara <caolanm@redhat.com>	Sun Jul 05 16:44:09 2020 +0200
tree 24388695e580fab69539bc4d9304e8a5535ef6bf
parent 7b6549811a929e004266a6ead26b69d499c73e0c [diff]

Bisected with: bibisect-linux64-7.1

Adding Cc: to Caolán McNamara
Comment 2 Caolán McNamara 2020-07-13 19:43:26 UTC
DBL_MIN doesn't at all do what I assumed it does, oops
Comment 3 Commit Notification 2020-07-14 08:15:43 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/e200a08f0982cc9f5993deeee03eb8ce2a110e71

Resolves: tdf#134786 use std::numeric_limits::lowest

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Xisco Faulí 2020-07-14 14:35:24 UTC
Verified in

Version: 7.1.0.0.alpha0+
Build ID: 616a47c9570f9ce67b18a124f08f4a342bff3468
CPU threads: 4; OS: Linux 4.19; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

@Caolán, thanks for fixing this issue!!