Resolves: tdf#134786 use std::numeric_limits::lowest

Change-Id: I5ef2a2779f2b534d68a8a15b74beb62b2eeefa5d
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/98693
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>